--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -778,4 +778,12 @@ $labels-dark: #8a8dba; // header nav, labels
 			color: #fff;
 		}
 	}
+
+	.modal-title {
+		color: #fff;
+	}
+
+	.modal-content {
+		background-color: $dark-light-bg;
+	}
 }
